--- a/Src/FlyPhotos/Strings/ml-IN/Resources.resw
+++ b/Src/FlyPhotos/Strings/ml-IN/Resources.resw
@@ -198,6 +198,27 @@
   <data name="ComboThemeItemLight.Content" xml:space="preserve">
     <value>ലൈറ്റ്</value>
   </data>
+  <data name="ConfirmDeletion.Title" xml:space="preserve">
+    <value>ഡിലീറ്റ് സ്ഥിരീകരിക്കുക</value>
+  </data>
+  <data name="ConfirmDeletion.Message" xml:space="preserve">
+    <value>ഈ ഫയൽ നീക്കം ചെയ്യാൻ നിങ്ങൾക്ക് ഉറപ്പാണോ?</value>
+  </data>
+  <data name="ConfirmDeletion.DeleteButton" xml:space="preserve">
+    <value>ഡിലീറ്റ്</value>
+  </data>
+  <data name="ConfirmDeletion.CancelButton" xml:space="preserve">
+    <value>റദ്ദാക്കുക</value>
+  </data>
+  <data name="DeletionFailed.Title" xml:space="preserve">
+    <value>ഡിലീറ്റ് പരാജയപ്പെട്ടു</value>
+  </data>
+  <data name="DeletionFailed.Message" xml:space="preserve">
+    <value>അപ്ലിക്കേഷൻ ഫയൽ ഡിലീറ്റ് ചെയ്യാൻ കഴിഞ്ഞില്ല.</value>
+  </data>
+  <data name="DeletionFailed.CloseButton" xml:space="preserve">
+    <value>ശരി</value>
+  </data>
   <data name="SettingsCardWindowBackground.Header" xml:space="preserve">
     <value>വിൻഡോ പശ്ചാത്തലം</value>
   </data>
@@ -468,5 +489,11 @@
   </data>
   <data name="SettingsCardVersion.Description" xml:space="preserve">
     <value>നിലവിലെ പതിപ്പ് : 2.5.14</value>
+  </data>
+  <data name="NoShortcutsCreated.Message" xml:space="preserve">
+    <value>എന്ത് ശോർട്ട്കട്ടുകളും സൃഷ്ടിച്ചിട്ടില്ല. ക്രമീകരണങ്ങളിൽ ക്രമീകരിക്കുക.</value>
+  </data>
+  <data name="LoadingHighQuality.Message" xml:space="preserve">
+    <value>ഉയർന്ന ഗുണമേൻമയുള്ള പതിപ്പ് ലോഡ് ചെയ്യുന്നു. കുറച്ചുകാലം കഴിഞ്ഞ് ശ്രമിക്കുക</value>
   </data>
 </root>
