--- a/Src/FlyPhotos/Strings/de-DE/Resources.resw
+++ b/Src/FlyPhotos/Strings/de-DE/Resources.resw
@@ -428,7 +428,7 @@
     <value>Codecs</value>
   </data>
   <data name="TextBlockCodecsInfo.Text" xml:space="preserve">
-    <value>Fly verwendet hauptsächlich integrierte Windows Imaging Component (WIC) Codecs.</value>
+    <value>FlyPhotos verwendet hauptsächlich integrierte Windows Imaging Component (WIC) Codecs.</value>
   </data>
   <data name="HeaderCodec.Text" xml:space="preserve">
     <value>Codec</value>
@@ -495,5 +495,14 @@
   </data>
   <data name="LoadingHighQuality.Message" xml:space="preserve">
     <value>Lade hochauflösende Version. Versuchen Sie es später erneut.</value>
+  </data>
+  <data name="SettingsPage.Title" xml:space="preserve">
+    <value>FlyPhotos - Einstellungen</value>
+  </data>
+  <data name="ColorPickerFlyoutOkButton.Content" xml:space="preserve">
+    <value>Ok</value>
+  </data>
+  <data name="ColorPickerFlyoutCancelButton.Content" xml:space="preserve">
+    <value>Abbrechen</value>
   </data>
 </root>
