--- a/Src/FlyPhotos/Strings/de-DE/Resources.resw
+++ b/Src/FlyPhotos/Strings/de-DE/Resources.resw
@@ -505,4 +505,22 @@
   <data name="ColorPickerFlyoutCancelButton.Content" xml:space="preserve">
     <value>Abbrechen</value>
   </data>
+  <data name="AppSelectionDialog.Title" xml:space="preserve">
+    <value>Anwendung auswählen</value>
+  </data>
+  <data name="AppSelectionDialog.PrimaryButtonText" xml:space="preserve">
+    <value>Auswählen</value>
+  </data>
+  <data name="AppSelectionDialog.SecondaryButtonText" xml:space="preserve">
+    <value>Abbrechen</value>
+  </data>
+  <data name="BrowseBtn.Content" xml:space="preserve">
+    <value>Nach App durchsuchen...</value>
+  </data>
+  <data name="ScanningTextBlock.Text" xml:space="preserve">
+    <value>Apps werden gescannt...</value>
+  </data>
+  <data name="SearchBox.PlaceholderText" xml:space="preserve">
+    <value>Apps suchen...</value>
+  </data>
 </root>
