--- a/Src/FlyPhotos/Strings/de-DE/Resources.resw
+++ b/Src/FlyPhotos/Strings/de-DE/Resources.resw
@@ -523,4 +523,13 @@
   <data name="SearchBox.PlaceholderText" xml:space="preserve">
     <value>Apps suchen...</value>
   </data>
+  <data name="TrialExpiredMessage.Title" xml:space="preserve">
+    <value>Testversion abgelaufen</value>
+  </data>
+  <data name="TrialExpiredMessage.Content" xml:space="preserve">
+    <value>Ihre kostenlose Testversion ist abgelaufen. Bitte kaufen Sie die App im Microsoft Store.</value>
+  </data>
+  <data name="TrialExpiredMessage.CloseButton" xml:space="preserve">
+    <value>OK</value>
+  </data>
 </root>
