--- a/Src/FlyPhotos/Strings/ml-IN/Resources.resw
+++ b/Src/FlyPhotos/Strings/ml-IN/Resources.resw
@@ -532,4 +532,37 @@
   <data name="TrialExpiredMessage.CloseButton" xml:space="preserve">
     <value>ശരി</value>
   </data>
+  <data name="SettingsCardKeyboardShortCuts.Description" xml:space="preserve">
+    <value>Left/Right ആരോ കീകൾ : ഫോട്ടോകൾ മാറ്റാൻ
+Up/Down ആരോ കീകൾ : സൂം ഇൻ അഥവാ ഔട്ട് ചെയ്യാൻ
+മൗസ് ലെഫ്റ്റ് ക്ലിക്ക് ചെയ്ത് നീക്കുക : ഫോട്ടോ നീക്കാൻ (Pan)
+
+മൗസ് വീൽ : സൂം ചെയ്യാൻ / ഫോട്ടോകൾ മാറ്റാൻ (ക്രമീകരണം അനുസരിച്ച്)
+Ctrl + മൗസ് വീൽ : സൂം ഇൻ അഥവാ ഔട്ട് ചെയ്യാൻ
+Alt + മൗസ് വീൽ : ഫോട്ടോകൾ മാറ്റാൻ
+മൗസ് വീൽ ഇടത്തോട്ട് അല്ലെങ്കിൽ വലത്തോട്ട് ചരിക്കുക : ഫോട്ടോകൾ മാറ്റാൻ
+
+Ctrl + ആരോ കീകൾ : ഫോട്ടോ നീക്കാൻ (Pan)
+Ctrl + + : സൂം ഇൻ
+Ctrl + - : സൂം ഔട്ട്
+
+Alt + Left/Right ആരോ കീകൾ : മൾട്ടി-പേജ് TIFF പേജുകൾ മാറ്റാൻ
+
+Page Up/Page Down : അടുത്ത പ്രീസെറ്റിലേക്ക് സൂം ചെയ്യാൻ (100%, 400%, Fit)
+Home : ആദ്യത്തെ ഫോട്ടോയിലേക്ക് പോകാൻ
+End : അവസാനത്തെ ഫോട്ടോയിലേക്ക് പോകാൻ
+
+തമ്പ്‌നെയിൽ സ്ട്രിപ്പിൽ മൗസ് വീൽ ചെയ്യുമ്പോൾ : ഫോട്ടോകൾ മാറ്റാൻ
+സ്‌ക്രീനിലെ Left/Right ബട്ടണിൽ മൗസ് വീൽ ചെയ്യുമ്പോൾ : ഫോട്ടോകൾ മാറ്റാൻ
+സ്‌ക്രീനിലെ റൊട്ടേറ്റ് ബട്ടണിൽ മൗസ് വീൽ ചെയ്യുമ്പോൾ : ഫോട്ടോ തിരിക്കാൻ (Rotate)
+
+ടച്ച്‌പാഡിൽ രണ്ട് വിരൽ കൊണ്ട് ഇടത്തോട്ട്/വലത്തോട്ട് സ്വൈപ്പ് : ഫോട്ടോകൾ മാറ്റാൻ
+ടച്ച്‌പാഡിൽ രണ്ട് വിരൽ കൊണ്ട് മുകളിലോട്ട്/താഴോട്ട് സ്വൈപ്പ് : സൂം ചെയ്യാൻ / ഫോട്ടോകൾ മാറ്റാൻ
+ടച്ച്‌പാഡിൽ പിഞ്ച് (Pinch) ചെയ്യുക : സൂം ഇൻ അഥവാ ഔട്ട് ചെയ്യാൻ
+
+D : ഫയൽ വിവരങ്ങൾ (Properties) കാണാൻ
+Del : ഫോട്ടോ ഡിലീറ്റ് ചെയ്യാൻ
+
+Esc : ക്രമീകരണങ്ങൾ ക്ലോസ് ചെയ്യാൻ അല്ലെങ്കിൽ ആപ്പിൽ നിന്ന് പുറത്തുകടക്കാൻ</value>
+  </data>
 </root>
