--- a/Src/FlyPhotos/Strings/en-US/Resources.resw
+++ b/Src/FlyPhotos/Strings/en-US/Resources.resw
@@ -532,4 +532,37 @@
   <data name="TrialExpiredMessage.CloseButton" xml:space="preserve">
     <value>OK</value>
   </data>
+  <data name="SettingsCardKeyboardShortCuts.Description" xml:space="preserve">
+    <value>Left/Right Arrow Keys : Navigate Photos
+Up/Down Arrow Keys : Zoom In or Out
+Mouse Left Click and Drag : Pan Photo
+
+Mouse Wheel : Zoom In or Out / Navigate Photos (based on setting)
+Ctrl + Mouse Wheel : Zoom In or Out
+Alt + Mouse Wheel : Navigate Photos
+Tilt Mouse Wheel Left or Right : Navigate Photos
+
+Ctrl + Arrow Keys : Pan Photo
+Ctrl + + : Zoom In
+Ctrl + - : Zoom Out
+
+Alt + Left/Right Arrow Keys : Navigate pages in multi-page TIFF
+
+Page Up/Page Down : Zoom In/Out to next Preset (100%, 400%, Fit)
+Home : Navigate to first photo
+End : Navigate to last photo
+
+Mouse Wheel on Thumbnail strip : Navigate Photos
+Mouse Wheel on On-Screen Left/Right Button : Navigate Photos
+Mouse Wheel on On-Screen Rotate Button : Rotate Photo
+
+TouchPad two-finger swipe Left or Right : Navigate Photos
+TouchPad two-finger swipe Up or Down : Zoom In or Out / Navigate Photos (based on Mouse Wheel setting)
+TouchPad pinch open or close : Zoom In or Out
+
+D : Show File Properties
+Del : Delete Photo
+
+Esc : Close Settings or Exit App</value>
+  </data>
 </root>
