#107 - Localized Indicators like File Not Found, Preview Failed etc. + Separated Indicator logic to separate class + Renamed ImageUtil.cs to ImageReader.cs and moved to Reader folder.

--- a/Src/FlyPhotos/Strings/de-DE/Resources.resw
+++ b/Src/FlyPhotos/Strings/de-DE/Resources.resw
@@ -565,4 +565,16 @@ Entf (Del) : Foto löschen
 
 Esc : Einstellungen schließen oder App beenden</value>
   </data>
+  <data name="Status_FileNotFound" xml:space="preserve">
+    <value>Datei nicht gefunden</value>
+  </data>
+  <data name="Status_PreviewFailed" xml:space="preserve">
+    <value>Vorschau konnte nicht geladen werden</value>
+  </data>
+  <data name="Status_InvalidFile" xml:space="preserve">
+    <value>Ungültige Datei</value>
+  </data>
+  <data name="Status_Loading" xml:space="preserve">
+    <value>Wird geladen...</value>
+  </data>
 </root>
