--- a/Src/FlyPhotos/Strings/en-US/Resources.resw
+++ b/Src/FlyPhotos/Strings/en-US/Resources.resw
@@ -565,4 +565,16 @@ Del : Delete Photo
 
 Esc : Close Settings or Exit App</value>
   </data>
+  <data name="Status_FileNotFound" xml:space="preserve">
+    <value>File not found</value>
+  </data>
+  <data name="Status_PreviewFailed" xml:space="preserve">
+    <value>Preview loading failed</value>
+  </data>
+  <data name="Status_InvalidFile" xml:space="preserve">
+    <value>Invalid File</value>
+  </data>
+  <data name="Status_Loading" xml:space="preserve">
+    <value>Loading...</value>
+  </data>
 </root>
