--- a/Src/FlyPhotos/Strings/ml-IN/Resources.resw
+++ b/Src/FlyPhotos/Strings/ml-IN/Resources.resw
@@ -526,6 +526,9 @@
   <data name="TrialExpiredMessage.Title" xml:space="preserve">
     <value>പരീക്ഷണ കാലാവധി അവസാനിച്ചു</value>
   </data>
+  <data name="SettingsCardLanguage.Header" xml:space="preserve">
+    <value>ഭാഷ തിരഞ്ഞെടുക്കുക</value>
+  </data>
   <data name="TrialExpiredMessage.Content" xml:space="preserve">
     <value>നിങ്ങളുടെ സൗജന്യ പരീക്ഷണ കാലാവധി അവസാനിച്ചു. ദയവായി Microsoft Store-ൽ നിന്ന് ആപ്പ് വാങ്ങുക.</value>
   </data>
